correcting article display on mobile

--- a/src/styles/components/_article.scss
+++ b/src/styles/components/_article.scss
@@ -5,31 +5,49 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background:$color-bg;
   z-index: 2;
-  overflow: scroll;
-  padding-top: 10.4167vmax;
 }
+
+.c-article__container {
+  background: $color-bg;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding-top: 10.4167vmax;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+  z-index: 3;
+}
+
 .c-article--open {
   display: block;
+
   @include bp(medium) {
     display: flex;
     justify-content: center;
   }
 }
 
+.c-article__img {
+  width: 100%;
+}
+
 .c-article__desc {
   padding: 1.5em 1.5em 0;
 
- >h1,
- p {
-   margin-bottom: 1.625rem;
- }
- @include bp(medium) {
-  width: 20.834vw;
-  padding: 0;
- }
+  >h1,
+  p {
+    margin-bottom: 1.625rem;
+  }
+
+  @include bp(medium) {
+    width: 20.834vw;
+    padding: 0;
+  }
 }
+
 .c-article__desc-date {
   font-size: 0.8889rem;
 }
@@ -37,9 +55,13 @@
 .c-article__inner {
   background: $color-white;
   position: absolute;
+
+
   @include bp(medium) {
+    margin-left: calc((100% - 66.6667%) / 2);
     width: 66.6667%;
   }
+
   margin-bottom: 10.4167vmax;
 }
 
@@ -51,10 +73,11 @@
   align-items: center;
   margin-top: 6.458vw;
   margin-bottom: 6.458vw;
-  padding: 0 1.5em;
+  padding: 0 1.5em 3em;
+
 
   @include bp(medium) {
-    > p {
+    >p {
       width: 36.458vw;
       margin-bottom: 1.625rem;
       padding: 0;
