--- a/src/styles/components/_btn.scss
+++ b/src/styles/components/_btn.scss
@@ -31,11 +31,16 @@
   flex-direction: column-reverse;
   align-items: flex-end;
   position: absolute;
-  bottom: 2.29167vmax;
+  bottom: 3.29167vmax;
   right: 2.0834vmax;
   width: 1.25vmax;
   height: 0.8334vmax;
   cursor: pointer;
+
+  @include bp(medium) {
+    bottom: 2.29167vmax;
+    right: 2.0834vmax;
+  }
 }
 
 /* Style variants
@@ -48,7 +53,8 @@
   &:hover,
   &:active,
   &:focus {
-    text-decoration: none; /* [4] */
+    text-decoration: none;
+    /* [4] */
     color: $color-white;
   }
 
