--- a/src/styles/elements/_headings.scss
+++ b/src/styles/elements/_headings.scss
@@ -9,7 +9,7 @@
  */
 
 h1 {
-  font-family: RubikBold;
+  font-family: $font-rubik-bold;
   font-style: normal;
   font-weight: bold;
   line-height: normal;
