--- a/src/styles/objects/_layout.scss
+++ b/src/styles/objects/_layout.scss
@@ -64,7 +64,7 @@
     flex-direction: column;
 
     @include bp(medium) {
-      width: 49.69%;
+      width: 50%;
       height: auto;
       justify-content: center;
       align-items: center;
