--- a/src/styles/settings/_global.scss
+++ b/src/styles/settings/_global.scss
@@ -19,6 +19,7 @@ $font-sans-serif: -apple-system,
   'Arial',
   sans-serif !default;
 $font-rubik-regular: 'Rubik';
+$font-rubik-bold: 'RubikBold';
 
 /* Breakpoints
    ========================================================================== */
